Update index pages

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Tiph Nomad Digital
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Tiphanie Dousset!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hi there, welcome to my blog!</h1>
+	<p>I'll try to write some updates as often as possible. Just <em>follow </em> me for this:
+    <a href="/blog/kutis">Kutis over there</a></p>
+    <a href="/blog/family">Family over there</a></p>
 </div><!-- /.blurb -->
