WIP: create Montreal page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ title: Tiph Nomad Digital
 <div class="blurb">
 	<h1>Hi there, welcome to my blog!</h1>
 	<p>I'll try to write some updates as often as possible. Just <em>follow </em> me for this:
+
     <a href="/blog/kutis">Kutis over there</a></p>
-    <a href="/blog/family">Family over there</a></p>
+    <a href="/blog/montreal">Montreal</a></p>
 </div><!-- /.blurb -->
