Add introdution text

--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@ layout: default
 title: Tiph Nomad Digital
 ---
 <div class="blurb">
-	<h1>Hi there, welcome to my blog!</h1>
-	<p>I'll try to write some updates as often as possible. Just <em>follow </em> me for this:
+    <h1> Dear all, </h1>
+     <p> We remember the nights we went out .... </p>
+     <p>We remember the nights we almost...... </p>
+     <p>We remember the nights we .....</p>
+    <p> For they were the best.</p>
+    
+    <h1><em>
+     - No one looks back on their life and remembers the nights they got plenty of sleep -
+    </em> </h1>
+    <p> No one. </p>
 
-    <a href="/blog/kutis">Kutis over there</a></p>
-    <a href="/blog/montreal">Montreal</a></p>
+
+<p>I'll try to write some updates as often as possible. Just <em>follow </em> me for this:</p>
+
+    <p><a href="/blog/kutis">Kutis over there</a></p>
+    <p><a href="/blog/montreal">Montreal</a></p>
+
+    <!-- [Live a life you will remember](https://www.youtube.com/watch?v=UtF6Jej8yb4) --> 
+    <!-- [![IMAGE ALT TEXT HERE](https://img.youtube.com/vi/UtF6Jej8yb4/0.jpg)](https://www.youtube.com/watch?v=UtF6Jej8yb4) -->
 </div><!-- /.blurb -->
