--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@ title: Tiph Nomad Digital
     <p><a href="/blog/kutis">Kutis over there</a></p>
     <p><a href="/blog/montreal">Montreal</a></p>
 
-    <!-- [Live a life you will remember](https://www.youtube.com/watch?v=UtF6Jej8yb4) --> 
-    <!-- [![IMAGE ALT TEXT HERE](https://img.youtube.com/vi/UtF6Jej8yb4/0.jpg)](https://www.youtube.com/watch?v=UtF6Jej8yb4) -->
-</div><!-- /.blurb -->
+    <p>[Live a life you will remember](https://www.youtube.com/watch?v=UtF6Jej8yb4)</p>
+
+</div>
